# pyPDFserver

./: README.md  pyproject.toml
.github/workflows/: build.yml
docker/: Dockerfile
pypdfserver/: __init__.py  __main__.py  cmd.py  core.py  default.ini  default_profiles.ini  html.py  log.py  pdf_worker.py  pkg.py  server.py  settings.py
pypdfserver/html/: index.html  task_group_template.html  task_template.html
src/: __init__.py  config.py  default.ini  log.py  pdf.py  pdf_worker.py  server.py
